# UdemyCmake

./: CMake_BasicsRun.md  Readme.md  Setup.md
1_Intro/: Setup.md
2_CMake/: CMakeProjectOptions.md
2_CMake/1_HelloWorld/: CMakeLists.txt  main.cpp
2_CMake/2_BaseicProject/: CMakeLists.txt  main.cpp
2_CMake/3_IntermediateProject/: CMakeLists.txt  Readme.md
2_CMake/3_IntermediateProject/src/: CMakeLists.txt  my_lib.cpp
2_CMake/4_VariableOptions/: CMakeLists.txt  Makefile  ReadMe.md
2_CMake/4_VariableOptions/inc/: my_lib.hpp
2_CMake/4_VariableOptions/src/: CMakeLists.txt
2_CMake/5_ConfigureFile/: CMakeLists.txt  Makefile  Readme.md
2_CMake/5_ConfigureFile/src/: CMakeLists.txt  my_lib.cpp
2_CMake/6_SourcesAndHeaders/: ReadMe.md
2_CMake/6_SourcesAndHeaders/app/: CMakeLists.txt
2_CMake/6_SourcesAndHeaders/src/: CMakeLists.txt
3_Outro/: Readme.md
4_Docs/: CMakeProjectOptions.md  CMake_BasicsRun.md
